[gd_scene load_steps=13 format=3 uid="uid://chewr6svhvjja"]

[ext_resource type="Texture2D" uid="uid://c0775f6d1ul7e" path="res://Buttons/Buttons/slice/Continue/none.png" id="1_f777t"]
[ext_resource type="Script" uid="uid://b26dasny7b4lj" path="res://UI/scrpits/pause_menu.gd" id="1_tmujs"]
[ext_resource type="Shader" uid="uid://cv4gn51dd5036" path="res://UI/pause_menu.gdshader" id="2_15845"]
[ext_resource type="Texture2D" uid="uid://b2grca5i7ig2m" path="res://Buttons/Buttons/slice/Continue/Holder.png" id="2_lbco2"]
[ext_resource type="Texture2D" uid="uid://bxe6gqw43tq2d" path="res://Buttons/Buttons/slice/Restart/none.png" id="3_efd2x"]
[ext_resource type="Texture2D" uid="uid://swgqpa0b4akx" path="res://Buttons/Buttons/slice/Restart/Holder.png" id="4_irn3u"]
[ext_resource type="Texture2D" uid="uid://bdgvyd8gre326" path="res://Buttons/Buttons/slice/Menu/none.png" id="5_bfhxk"]
[ext_resource type="Texture2D" uid="uid://d2ec1qfpmwjy2" path="res://Buttons/Buttons/slice/Menu/Holder.png" id="6_emqo5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fuwrj"]
shader = ExtResource("2_15845")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_o3bnt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_b502l"]
resource_name = "fade"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f8cte"]
_data = {
&"RESET": SubResource("Animation_o3bnt"),
&"fade": SubResource("Animation_b502l")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tmujs")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_fuwrj")
layout_mode = 0
offset_left = -280.0
offset_top = -288.0
offset_right = 1696.0
offset_bottom = 1120.0

[node name="Control" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 448.0
offset_top = 64.0
offset_right = 488.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0933334
anchor_top = 0.0505952
anchor_right = 0.893733
anchor_bottom = 0.2533
offset_left = 28.2667
offset_top = 13.9762
offset_right = 76.2666
offset_bottom = 29.9762
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
size_flags_horizontal = 4
texture_normal = ExtResource("1_f777t")
texture_pressed = ExtResource("2_lbco2")
texture_hover = ExtResource("2_lbco2")

[node name="New Game" type="TextureButton" parent="Control"]
layout_mode = 2
offset_left = 32.0
offset_top = 120.0
offset_right = 80.0
offset_bottom = 136.0
scale = Vector2(5, 5)
size_flags_horizontal = 4
texture_normal = ExtResource("3_efd2x")
texture_pressed = ExtResource("4_irn3u")
texture_hover = ExtResource("4_irn3u")

[node name="Main menu" type="TextureButton" parent="Control"]
layout_mode = 2
offset_left = 80.0
offset_top = 224.0
offset_right = 112.0
offset_bottom = 240.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(5, 5)
size_flags_horizontal = 4
texture_normal = ExtResource("5_bfhxk")
texture_pressed = ExtResource("6_emqo5")
texture_hover = ExtResource("6_emqo5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f8cte")
}

[connection signal="pressed" from="Control/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Control/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Control/Main menu" to="." method="_on_main_menu_pressed"]
